# BsPatchTest

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/github/xch168/bspatchtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bspatch-util.c  bspatch-util.h  bspatch.c
app/src/main/java/com/github/xch168/bspatchtest/: BsPatchUtil.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/github/xch168/bspatchtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
